# compare_bacteria

./: Cargo.toml  benchmark.sh  fix_unknown.sh  generate_graphs.sh  large.txt  long.txt  short.txt  small.txt  validation.txt
benches/: for_while_test.rs
data/: GCF_000006625.1_ASM662v1_protein.faa  GCF_000006685.1_ASM668v1_protein.faa  GCF_000007025.1_ASM702v1_protein.faa  GCF_000007205.1_ASM720v1_protein.faa  GCF_000007365.1_ASM736v1_protein.faa  GCF_000007485.1_ASM748v1_protein.faa  GCF_000007605.1_ASM760v1_protein.faa  GCF_000008025.1_ASM802v1_protein.faa  GCF_000008045.1_ASM804v1_protein.faa  GCF_000008205.1_ASM820v1_protein.faa  GCF_000008225.1_ASM822v1_protein.faa  GCF_000008245.1_ASM824v1_protein.faa  GCF_000008305.1_ASM830v1_protein.faa  GCF_000008365.1_ASM836v1_protein.faa  GCF_000008385.1_ASM838v1_protein.faa  GCF_000008405.1_ASM840v1_protein.faa  GCF_000008605.1_ASM860v1_protein.faa  GCF_000008685.2_ASM868v2_protein.faa  GCF_000008745.1_ASM874v1_protein.faa  GCF_000009025.1_ASM902v1_protein.faa  GCF_000009605.1_ASM960v1_protein.faa  GCF_000009945.1_ASM994v1_protein.faa  GCF_000010205.1_ASM1020v1_protein.faa  GCF_000010365.1_ASM1036v1_protein.faa  GCF_000010405.1_ASM1040v1_protein.faa  GCF_000011165.1_ASM1116v1_protein.faa  GCF_000011225.1_ASM1122v1_protein.faa  GCF_000011745.1_ASM1174v1_protein.faa  GCF_000011905.1_ASM1190v1_protein.faa  GCF_000011945.1_ASM1194v1_protein.faa  GCF_000012085.2_ASM1208v2_protein.faa  GCF_000012125.1_ASM1212v1_protein.faa  GCF_000012225.1_ASM1222v1_protein.faa  GCF_000012385.1_ASM1238v1_protein.faa  (+995 more)
src/: bad_profiler.rs  main.rs
